--- a/currentConfig.json
+++ b/currentConfig.json
@@ -6,11 +6,11 @@
   "sampleDataConfig": [
     {
       "variationFilePath": [
-        "././sound-samples/custom/crystal-clear-stream/0a.ogg",
-        "././sound-samples/custom/crystal-clear-stream/0b.ogg"
+        "./sound-samples/demo/0a.m4a",
+        "./sound-samples/demo/0b.m4a"
       ],
       "stitchingMethod": "JOIN_WITH_OVERLAY",
-      "concatOverlayMs": 4000,
+      "concatOverlayMs": 1000,
       "timingWindows": [
         {
           "startAt": 0,
@@ -20,25 +20,16 @@
             "minTimeframeLengthMs": 3600,
             "maxTimeframeLengthMs": 7200
           }
-        },
-        {
-          "startAt": 30000,
-          "params": {
-            "minVolRatio": 0.1,
-            "maxVolRatio": 0.11,
-            "minTimeframeLengthMs": 3600,
-            "maxTimeframeLengthMs": 7200
-          }
         }
       ]
     },
     {
       "variationFilePath": [
-        "././sound-samples/custom/crystal-clear-stream/1a.ogg",
-        "././sound-samples/custom/crystal-clear-stream/1b.ogg"
+        "./sound-samples/demo/1a.m4a",
+        "./sound-samples/demo/1b.m4a"
       ],
       "stitchingMethod": "JOIN_WITH_OVERLAY",
-      "concatOverlayMs": 2000,
+      "concatOverlayMs": 1000,
       "timingWindows": [
         {
           "startAt": 0,
@@ -48,236 +39,22 @@
             "minTimeframeLengthMs": 3600,
             "maxTimeframeLengthMs": 7200
           }
-        },
-        {
-          "startAt": 30000,
-          "params": {
-            "minVolRatio": 0.1,
-            "maxVolRatio": 0.11,
-            "minTimeframeLengthMs": 3600,
-            "maxTimeframeLengthMs": 7200
-          }
         }
       ]
     },
     {
       "variationFilePath": [
-        "././sound-samples/custom/crystal-clear-stream/2a.ogg",
-        "././sound-samples/custom/crystal-clear-stream/2b.ogg"
+        "./sound-samples/demo/2a.m4a",
+        "./sound-samples/demo/2b.m4a"
       ],
       "stitchingMethod": "JOIN_WITH_OVERLAY",
-      "concatOverlayMs": 4000,
+      "concatOverlayMs": 1000,
       "timingWindows": [
         {
           "startAt": 0,
           "params": {
             "minVolRatio": 0.2,
             "maxVolRatio": 0.24,
-            "minTimeframeLengthMs": 3600,
-            "maxTimeframeLengthMs": 7200
-          }
-        },
-        {
-          "startAt": 30000,
-          "params": {
-            "minVolRatio": 0.1,
-            "maxVolRatio": 0.11,
-            "minTimeframeLengthMs": 3600,
-            "maxTimeframeLengthMs": 7200
-          }
-        }
-      ]
-    },
-    {
-      "variationFilePath": [
-        "././sound-samples/custom/crystal-clear-stream/3a.ogg",
-        "././sound-samples/custom/crystal-clear-stream/3b.ogg"
-      ],
-      "stitchingMethod": "JOIN_WITH_OVERLAY",
-      "concatOverlayMs": 4000,
-      "timingWindows": [
-        {
-          "startAt": 0,
-          "params": {
-            "minVolRatio": 0.33,
-            "maxVolRatio": 0.37,
-            "minTimeframeLengthMs": 3600,
-            "maxTimeframeLengthMs": 7200
-          }
-        },
-        {
-          "startAt": 30000,
-          "params": {
-            "minVolRatio": 0.1,
-            "maxVolRatio": 0.11,
-            "minTimeframeLengthMs": 3600,
-            "maxTimeframeLengthMs": 7200
-          }
-        }
-      ]
-    },
-    {
-      "variationFilePath": [
-        "././sound-samples/custom/crystal-clear-stream/4a.ogg",
-        "././sound-samples/custom/crystal-clear-stream/4b.ogg"
-      ],
-      "stitchingMethod": "JOIN_WITH_OVERLAY",
-      "concatOverlayMs": 3000,
-      "timingWindows": [
-        {
-          "startAt": 0,
-          "params": {
-            "minVolRatio": 0.44,
-            "maxVolRatio": 0.48,
-            "minTimeframeLengthMs": 3600,
-            "maxTimeframeLengthMs": 7200
-          }
-        },
-        {
-          "startAt": 30000,
-          "params": {
-            "minVolRatio": 0.1,
-            "maxVolRatio": 0.11,
-            "minTimeframeLengthMs": 3600,
-            "maxTimeframeLengthMs": 7200
-          }
-        }
-      ]
-    },
-    {
-      "variationFilePath": [
-        "././sound-samples/custom/crystal-clear-stream/5a.ogg",
-        "././sound-samples/custom/crystal-clear-stream/5b.ogg"
-      ],
-      "stitchingMethod": "JOIN_WITH_OVERLAY",
-      "concatOverlayMs": 2500,
-      "timingWindows": [
-        {
-          "startAt": 0,
-          "params": {
-            "minVolRatio": 0.34,
-            "maxVolRatio": 0.38,
-            "minTimeframeLengthMs": 3600,
-            "maxTimeframeLengthMs": 7200
-          }
-        },
-        {
-          "startAt": 30000,
-          "params": {
-            "minVolRatio": 0.1,
-            "maxVolRatio": 0.11,
-            "minTimeframeLengthMs": 3600,
-            "maxTimeframeLengthMs": 7200
-          }
-        }
-      ]
-    },
-    {
-      "variationFilePath": [
-        "././sound-samples/custom/crystal-clear-stream/6a.ogg",
-        "././sound-samples/custom/crystal-clear-stream/6b.ogg"
-      ],
-      "stitchingMethod": "JOIN_WITH_OVERLAY",
-      "concatOverlayMs": 2500,
-      "timingWindows": [
-        {
-          "startAt": 0,
-          "params": {
-            "minVolRatio": 0.3,
-            "maxVolRatio": 0.34,
-            "minTimeframeLengthMs": 3600,
-            "maxTimeframeLengthMs": 7200
-          }
-        },
-        {
-          "startAt": 30000,
-          "params": {
-            "minVolRatio": 0.3,
-            "maxVolRatio": 0.34,
-            "minTimeframeLengthMs": 3600,
-            "maxTimeframeLengthMs": 7200
-          }
-        }
-      ]
-    },
-    {
-      "variationFilePath": [
-        "././sound-samples/custom/crystal-clear-stream/7a.ogg",
-        "././sound-samples/custom/crystal-clear-stream/7b.ogg"
-      ],
-      "stitchingMethod": "JOIN_WITH_OVERLAY",
-      "concatOverlayMs": 2000,
-      "timingWindows": [
-        {
-          "startAt": 0,
-          "params": {
-            "minVolRatio": 0.28,
-            "maxVolRatio": 0.32,
-            "minTimeframeLengthMs": 3600,
-            "maxTimeframeLengthMs": 7200
-          }
-        },
-        {
-          "startAt": 30000,
-          "params": {
-            "minVolRatio": 0.28,
-            "maxVolRatio": 0.32,
-            "minTimeframeLengthMs": 3600,
-            "maxTimeframeLengthMs": 7200
-          }
-        }
-      ]
-    },
-    {
-      "variationFilePath": [
-        "././sound-samples/custom/crystal-clear-stream/8a.ogg",
-        "././sound-samples/custom/crystal-clear-stream/8b.ogg"
-      ],
-      "stitchingMethod": "JOIN_WITH_OVERLAY",
-      "concatOverlayMs": 2000,
-      "timingWindows": [
-        {
-          "startAt": 0,
-          "params": {
-            "minVolRatio": 0.24,
-            "maxVolRatio": 0.28,
-            "minTimeframeLengthMs": 3600,
-            "maxTimeframeLengthMs": 7200
-          }
-        },
-        {
-          "startAt": 30000,
-          "params": {
-            "minVolRatio": 0.5,
-            "maxVolRatio": 0.6,
-            "minTimeframeLengthMs": 3600,
-            "maxTimeframeLengthMs": 7200
-          }
-        }
-      ]
-    },
-    {
-      "variationFilePath": [
-        "././sound-samples/custom/crystal-clear-stream/9a.ogg",
-        "././sound-samples/custom/crystal-clear-stream/9b.ogg"
-      ],
-      "stitchingMethod": "JOIN_WITH_OVERLAY",
-      "concatOverlayMs": 2000,
-      "timingWindows": [
-        {
-          "startAt": 0,
-          "params": {
-            "minVolRatio": 0.24,
-            "maxVolRatio": 0.28,
-            "minTimeframeLengthMs": 3600,
-            "maxTimeframeLengthMs": 7200
-          }
-        },
-        {
-          "startAt": 30000,
-          "params": {
-            "minVolRatio": 0.5,
-            "maxVolRatio": 0.6,
             "minTimeframeLengthMs": 3600,
             "maxTimeframeLengthMs": 7200
           }
