--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 sound-samples/custom/
 generated/*
 !generated/generated_files_stay_here
+webapp/src/sound-samples/*
+!webapp/src/sound-samples/demo
